Refactoring proprete code

--- a/www/index.html
+++ b/www/index.html
@@ -23,8 +23,16 @@
     <!-- ionic/angularjs datetimepicker -->
     <script src="lib/ionic-datepicker/dist/ionic-datepicker.bundle.min.js"></script>
 
-    <!-- your app's js -->
+    <!-- app's js -->
     <script src="js/app.js"></script>
+    <!-- directives's js -->
+    <script src="js/directives/standardTimeMeridian.js"></script>
+    <!-- services's js -->
+    <script src="js/services/Series.js"></script>
+    <!-- controllers's js -->
+    <script src="js/controllers/homeController.js"></script>
+    <script src="js/controllers/serieController.js"></script>
+    
   </head>
   <body ng-app="starter">
 
