--- a/www/index.html
+++ b/www/index.html
@@ -25,34 +25,33 @@
 
     <!-- app's js -->
     <script src="js/app.js"></script>
+    <!-- filter's js -->   
+    <script src="js/filters/isEmpty.js"></script>
     <!-- directives's js -->
     <script src="js/directives/standardTimeMeridian.js"></script>
     <!-- services's js -->
     <script src="js/services/Series.js"></script>
+    <script src="js/services/FileService.js"></script>
+    <script src="js/services/ImageService.js"></script>
     <!-- controllers's js -->
     <script src="js/controllers/homeController.js"></script>
     <script src="js/controllers/serieController.js"></script>
+    <script src="js/controllers/settingController.js"></script>
     
   </head>
   <body ng-app="starter">
 
-    <!--<ion-nav-bar class="bar-positive"><ion-nav-bar>
-
-    <ion-nav-view></ion-nav-view>
-  -->
   <ion-nav-bar class="bar-positive">
     <ion-nav-back-button></ion-nav-back-button>
   </ion-nav-bar>
-<ion-nav-view>
 
-</ion-nav-view>
-
-    <!--<ion-pane>
-      <ion-header-bar class="bar-stable">
-        <h1 class="title">Ionic Blank Starter</h1>
-      </ion-header-bar>
-      <ion-content>
-      </ion-content>
-    </ion-pane>-->
+  <ion-nav-view>
+  </ion-nav-view>
+  <!--
+  <div class="bar bar-footer">
+    <button class="button button-clear">Home</button>
+    <button class="button button-clear">Add Serie</button>
+  </div>
+  -->
   </body>
 </html>
